# solana-study

./: README.md
crowd_found/: Anchor.toml
crowd_found/programs/crowd_found/: Cargo.toml
crowd_found/programs/crowd_found/src/: error.rs  lib.rs
crowd_found/programs/crowd_found/src/instructions/: create.rs  delete.rs  donate.rs  mod.rs  update.rs  withdraw.rs
crowd_found/programs/crowd_found/src/state/: crowd_found.rs  mod.rs
crowd_found/tests/: crowd_found.ts
keypair_vs_pda/: Anchor.toml
keypair_vs_pda/programs/keypair_vs_pda/: Cargo.toml
keypair_vs_pda/programs/keypair_vs_pda/src/: lib.rs
keypair_vs_pda/tests/: keypair_vs_pda.ts  utils.ts
test_cpi/: Anchor.toml
test_cpi/programs/test_cpi/: Cargo.toml
test_cpi/programs/test_cpi/src/: lib.rs
test_cpi/tests/: test_cpi.ts  utils.ts
